@@ -28,6 +28,7 @@
 ;; We build the column from the horizons.
 (defcolumn Andeby default
   "The B.And farm, Andeby, 2002."
+  (location (-10 100))
   (Soil (horizons (-20 [cm] Ap) (-2.5 [m] C))
         (MaxRootingDepth 60.0 [cm]))
   (OrganicMatter original (init (input 1400 [kg C/ha/y])
@@ -40,13 +41,18 @@
   (Bioclimate default) 
 )
 
+(defcolumn Gaaseroed Andeby
+  "The B.And farm, Gaaseroed, 2002."
+  (location (-100 700) (-100 -700) (100 -700) (100 700)))
+
 ;; Use it.
-(column Andeby)
+(column Andeby Gaaseroed)
 
 ;; Simulation start date.
 (time 1986 12 1 1)
 (stop 1988 4 1 1)
-(manager activity
+
+(defaction MyMan activity
   (wait (at 1987 3 20 1))
   (plowing)
   (wait (at 1987 4 4 1))
@@ -56,25 +62,25 @@
   (progn
     (sow "Grass")
     (sow "Spring Barley"))
-  (wait (or (crop_ds_after "Spring Barley" 2.0)
-            (at 1987 9 5 1)))
+  (wait (at 1987 9 5 1))
   (harvest "Spring Barley")
   (wait (at 1987 9 8 1))
   (fertilize (mineral (weight 80.0 [kg N/ha])
                       (NH4_fraction 0.5 [])))
   (wait (at 1987 10 10 1))
   (harvest "Grass"
-           (stub 8.0 [cm])              ;Leave 8 cm stub.
-           (stem 1.00 []))             ;Harvest everything above stub.
+	   (stub 8.0 [cm])  ;Leave 8 cm stub.
+	   (stem 1.00 []))  ;Harvest everything above stub.
   )
+
+(manager progn
+	 (with-column "Andeby" MyMan)
+	 (with-column "Gaaseroed" MyMan))
+	 
+	 
 
 (deflog check extern
   (parameter_names column)
-  (declare x Number "x-coordinate of column")
-  (declare y Number "y-coordinate of column")
-  (numbers ((name x) (value $x))
-           ((name y) (value $y)))
-  (x 0) (y 0)
   (declare column String
 	   "Name of column to log.  Use \"*\" to log all columns.")
   (when (hourly))                      ;When the stress is highest.
@@ -89,8 +95,8 @@
                    (spec phenology default day_length)
                    (dimension "h"))
            (number (path column "${column}" Vegetation crops crops "*" Canopy Height)
-	      (tag "height")
-	      (spec fixed CanopyStandard Height)
+		   (tag "height")
+		   (spec fixed CanopyStandard Height)
                    (dimension "cm"))
            (number (path column "${column}" Vegetation crops crops "*" Canopy CAI)
                    (tag "Crop AI")
@@ -98,10 +104,10 @@
 ))
 
 (deflog Andeby check
-  (column "Andeby") (x -16) (y 4200.8))
+  (column "Andeby"))
 
 (deflog Gaaseroed check
-  (column "Gaaseroed") (x -10) (y 4300.8))
+  (column "Gaaseroed"))
 
 
 ;; Create these log files.
@@ -119,15 +125,12 @@
    (declare column String
  	   "Name of column to log.  Use \"*\" to exchange for all columns.")
    (column "*")
-   (declare x Number "x-coordinate of column")
-   (declare y Number "y-coordinate of column")
    (entries (name (name column) (value "${column}"))
-            (number (name x) (value $x) (dimension []))
-            (number (name y) (value $y) (dimension []))))
+))
  
 (defscope MyExchange column
    "My own exchange items."
-   (column Andeby) (x -16) (y 4200.8)
+   (column Andeby)
    (entries &old
             (number (name "GroundWaterTable")
                     (dimension [cm])
