@@ -1,3 +1,8 @@
+2007-08-20  Birgitte Gjettermann  <bgj@kvl.dk>
+
+	* cdaisy.C, cdaisy.h (daisy_column_get_description): New function.
+	
+
 2007-08-15  Per Abrahamsen  <abraham@dina.kvl.dk>
 
 	* cdaisy.C, cdaisy.h (daisy_column_location_size)
